Change: Move the Renderer.Object to LibRender
Cross port a bunch of stuff to viewers at the same time, makes things a little more common

--- a/source/LibRender/LibRender.csproj
+++ b/source/LibRender/LibRender.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Loading.cs" />
     <Compile Include="MotionBlur\MotionBlurMode.cs" />
     <Compile Include="Objects\ObjectListReference.cs" />
+    <Compile Include="Objects\RendererObject.cs" />
     <Compile Include="Objects\RenderFace.cs" />
     <Compile Include="Overlays\Keys.cs" />
     <Compile Include="Overlays\Markers.cs" />
