--- a/source/TrainEditor2/packages.config
+++ b/source/TrainEditor2/packages.config
@@ -3,6 +3,8 @@
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net461" />
   <package id="OpenTK" version="3.1.0" targetFramework="net461" />
   <package id="Prism.Core" version="7.2.0.1367" targetFramework="net461" />
+  <package id="ReactiveProperty" version="6.1.2" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.Reactive" version="4.1.6" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
