--- a/source/TrainEditor2/App.config
+++ b/source/TrainEditor2/App.config
@@ -13,6 +13,7 @@
         <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
       </dependentAssembly>
+	  <probing privatePath="Data\Formats"/>
     </assemblyBinding>
   </runtime>
 </configuration>
