--- a/source/TrainEditor2/packages.config
+++ b/source/TrainEditor2/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net472" />
   <package id="OpenTK" version="3.1.0" targetFramework="net472" />
+  <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net472" />
   <package id="Prism.Core" version="7.2.0.1367" targetFramework="net472" />
   <package id="ReactiveProperty" version="6.1.2" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
