--- a/source/Plugins/Sound.RiffWave/Sound.RiffWave.csproj
+++ b/source/Plugins/Sound.RiffWave/Sound.RiffWave.csproj
@@ -41,13 +41,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <OutputPath>..\..\..\bin_debug\</OutputPath>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <LangVersion>6</LangVersion>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>..\..\..\bin_release\</OutputPath>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <LangVersion>6</LangVersion>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
@@ -86,11 +86,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup>
-	  <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
+    <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
 		  mkdir $(TargetDir)Data\Plugins\
 		  move /Y $(TargetDir)$(TargetName).* $(TargetDir)Data\Plugins\
 	  </PostBuildEvent>
-	  <PostBuildEvent Condition=" '$(OS)' == 'Unix' ">
+    <PostBuildEvent Condition=" '$(OS)' == 'Unix' ">
 		  mkdir -p $(TargetDir)Data/Plugins/
 		  mv -f $(TargetDir)$(TargetName).* $(TargetDir)Data/Plugins/
 	  </PostBuildEvent>
