--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -45,14 +45,14 @@
   <ItemGroup>
     <Compile Include="Backgrounds\Background.cs" />
     <Compile Include="BaseRenderer.cs" />
-    <Compile Include="Cameras\Camera.cs" />
-    <Compile Include="Cameras\CameraAlignment.cs" />
-    <Compile Include="Fogs\Fog.cs" />
-    <Compile Include="Lightings\LightDefinition.cs" />
-    <Compile Include="Lightings\Lighting.cs" />
-    <Compile Include="Loadings\Loading.cs" />
-    <Compile Include="MotionBlurs\MotionBlur.cs" />
-    <Compile Include="MotionBlurs\MotionBlurMode.cs" />
+    <Compile Include="Camera\Camera.cs" />
+    <Compile Include="Camera\CameraAlignment.cs" />
+    <Compile Include="Fog\Fog.cs" />
+    <Compile Include="Lighting\LightDefinition.cs" />
+    <Compile Include="Lighting\Lighting.cs" />
+    <Compile Include="Loading\Loading.cs" />
+    <Compile Include="MotionBlur\MotionBlur.cs" />
+    <Compile Include="MotionBlur\MotionBlurMode.cs" />
     <Compile Include="Objects\FaceState.cs" />
     <Compile Include="Objects\ObjectLibrary.cs" />
     <Compile Include="openGL\FrameBufferObject.cs" />
@@ -66,16 +66,16 @@
     <Compile Include="Primitives\Rectangle.cs" />
     <Compile Include="openGL\Vertex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screens\OutputModes.cs" />
-    <Compile Include="Screens\Screen.cs" />
+    <Compile Include="Screen\OutputModes.cs" />
+    <Compile Include="Screen\Screen.cs" />
     <Compile Include="Shaders\Shader.cs" />
     <Compile Include="Textures\TextureManager.cs" />
-    <Compile Include="Texts\OpenGlFont.cs" />
-    <Compile Include="Texts\OpenGlFontChar.cs" />
-    <Compile Include="Texts\OpenGlFontTable.cs" />
-    <Compile Include="Texts\OpenGlString.cs" />
-    <Compile Include="Viewports\ViewportChangeModes.cs" />
-    <Compile Include="Viewports\ViewportModes.cs" />
+    <Compile Include="Text\OpenGlFont.cs" />
+    <Compile Include="Text\OpenGlFontChar.cs" />
+    <Compile Include="Text\OpenGlFontTable.cs" />
+    <Compile Include="Text\OpenGlString.cs" />
+    <Compile Include="Viewport\ViewportChangeModes.cs" />
+    <Compile Include="Viewport\ViewportModes.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\..\assets\Shaders\default.frag" />
