--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -222,6 +222,8 @@
     <Compile Include="Simulation\TrainManager\Brake\BrakeSystemType.cs" />
     <Compile Include="Simulation\TrainManager\Brake\CarBrake.cs" />
     <Compile Include="Simulation\TrainManager\Brake\ElectropnuematicBrakeType.cs" />
+    <Compile Include="Simulation\TrainManager\Car\Car.MotorCar.cs" />
+    <Compile Include="Simulation\TrainManager\Car\Car.TrailerCar.cs" />
     <Compile Include="Simulation\TrainManager\Car\ConstantSpeedDevice.cs" />
     <Compile Include="Simulation\TrainManager\Car\Coupler.cs" />
     <Compile Include="Simulation\TrainManager\Car\HoldBrake.cs" />
