Change: Convert ObjectBender to use API vectors

--- a/source/ObjectBender/ObjectBender.csproj
+++ b/source/ObjectBender/ObjectBender.csproj
@@ -73,4 +73,10 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OpenBveApi\OpenBveApi.csproj">
+      <Project>{27134980-4415-4375-a564-40a9014dfa5f}</Project>
+      <Name>OpenBveApi</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
